swag for /search, /all
